Revert "Update package versions"

--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -17,37 +17,37 @@
     <PackageReference Update="Microsoft.VisualStudioEng.MicroBuild.Core"                              Version="1.0.0" />
     <PackageReference Update="Nerdbank.GitVersioning"                                                 Version="3.6.79-alpha" />
     <PackageReference Update="Nerdbank.Streams"                                                       Version="2.9.112" />
-    <PackageReference Update="System.IO.Pipelines"                                                    Version="7.0.0" />
+    <PackageReference Update="System.IO.Pipelines"                                                    Version="6.0.3" />
 
     <!-- VS SDK -->
-    <PackageReference Update="EnvDTE"                                                                 Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.Internal.VisualStudio.Interop"                                Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.ServiceHub.Framework"                                         Version="4.3.8-preview" />
-    <PackageReference Update="Microsoft.VisualStudio.ComponentModelHost"                              Version="17.7.50-preview-gc2c2a34109" />
-    <PackageReference Update="Microsoft.VisualStudio.Composition"                                     Version="17.7.5-preview" />
+    <PackageReference Update="EnvDTE"                                                                 Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.Internal.VisualStudio.Interop"                                Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.ServiceHub.Framework"                                         Version="4.1.2060-alpha" />
+    <PackageReference Update="Microsoft.VisualStudio.ComponentModelHost"                              Version="17.3.198" />
+    <PackageReference Update="Microsoft.VisualStudio.Composition"                                     Version="17.4.1-alpha" />
     <PackageReference Update="Microsoft.VisualStudio.Data.Core"                                       Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.Data.Services"                                   Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.DataDesign.Common"                               Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.DataTools.Interop"                               Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.Debugger.Contracts"                              Version="17.4.0-beta.22470.1" />
     <PackageReference Update="Microsoft.VisualStudio.Debugger.UI.Interfaces"                          Version="17.4.0-beta.22470.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Designer.Interfaces"                             Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.ImageCatalog"                                    Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Interop"                                         Version="17.7.35640-preview.1" />
+    <PackageReference Update="Microsoft.VisualStudio.Designer.Interfaces"                             Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.ImageCatalog"                                    Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Interop"                                         Version="17.4.0-preview-2-32826-307" />
     <PackageReference Update="Microsoft.VisualStudio.ManagedInterfaces"                               Version="8.0.50728" />
-    <PackageReference Update="Microsoft.VisualStudio.RpcContracts"                                    Version="17.7.3-preview" />
+    <PackageReference Update="Microsoft.VisualStudio.RpcContracts"                                    Version="17.5.21" />
     <PackageReference Update="Microsoft.VisualStudio.SDK.EmbedInteropTypes"                           Version="15.0.36" />
-    <PackageReference Update="Microsoft.VisualStudio.Settings.15.0"                                   Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Setup.Configuration.Interop"                     Version="3.7.1040" />
-    <PackageReference Update="Microsoft.VisualStudio.Shell.15.0"                                      Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Shell.Design"                                    Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Shell.Framework"                                 Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Telemetry"                                       Version="17.7.10" />
-    <PackageReference Update="Microsoft.VisualStudio.TemplateWizardInterface"                         Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Threading"                                       Version="17.7.5-preview" />
-    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers"                             Version="17.7.5-preview" />
-    <PackageReference Update="Microsoft.VisualStudio.Utilities"                                       Version="17.7.35640-preview.1" />
-    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.6.11" />
+    <PackageReference Update="Microsoft.VisualStudio.Settings.15.0"                                   Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Setup.Configuration.Interop"                     Version="3.0.4492" />
+    <PackageReference Update="Microsoft.VisualStudio.Shell.15.0"                                      Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Shell.Design"                                    Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Shell.Framework"                                 Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Telemetry"                                       Version="16.6.7" />
+    <PackageReference Update="Microsoft.VisualStudio.TemplateWizardInterface"                         Version="17.3.32804.24" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading"                                       Version="17.6.36-alpha" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers"                             Version="17.6.36-alpha" />
+    <PackageReference Update="Microsoft.VisualStudio.Utilities"                                       Version="17.4.0-preview-3-32908-042" />
+    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.6.4-alpha" />
     <PackageReference Update="Microsoft.VisualStudio.XmlEditor"                                       Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VSSDK.BuildTools"                                             Version="17.5.18-preview1" />
     <PackageReference Update="System.Threading.Tasks.Dataflow"                                        Version="7.0.0" />
@@ -55,22 +55,14 @@
     <PackageReference Update="VsWebSite.Interop"                                                      Version="16.8.30523.219" />
 
     <!-- https://github.com/dotnet/roslyn/issues/53877 -->
-    <PackageReference Include="StreamJsonRpc"                                                         Version="2.16.9-preview" />
-
-    <!--
-    Some package we are referencing is not correctly advertising its dependency upon MSBuild, which leads to MissingFieldException at runtime during unit tests.
-    We add an explicit reference here so that tests run correctly.
-
-    TODO Temove this reference in future when whichever package we are referencing fixes its advertised dependencies.
-    -->
-    <PackageReference Update="Microsoft.Build"                                                        Version="17.7.0-preview-23226-04" />
+    <PackageReference Include="StreamJsonRpc"                                                         Version="2.14.20" />
 
     <!-- CPS -->
     <!-- Find versions at https://dev.azure.com/azure-public/vside/_artifacts/feed/vs-impl -->
-    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.Analyzers"                         Version="17.7.77-pre" />
-    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.Query"                             Version="17.7.77-pre" />
-    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK"                               Version="17.7.77-pre" />
-    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools"                         Version="17.7.77-pre" />
+    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.Analyzers"                         Version="17.5.396-pre" />
+    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.Query"                             Version="17.5.396-pre" />
+    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK"                               Version="17.5.396-pre" />
+    <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools"                         Version="17.5.396-pre" />
 
     <!-- Roslyn -->
     <PackageReference Update="Microsoft.CodeAnalysis"                                                 Version="4.6.0-1.final" />
@@ -101,14 +93,14 @@
     <!-- Tests -->
     <PackageReference Update="Moq"                                                                    Version="4.16.1" />
     <PackageReference Update="Verify.Xunit"                                                           Version="14.2.0" />
-    <PackageReference Update="xunit"                                                                  Version="2.4.2" />
-    <PackageReference Update="xunit.analyzers"                                                        Version="1.0.0"/>
-    <PackageReference Update="xunit.assert"                                                           Version="2.4.2" />
-    <PackageReference Update="xunit.combinatorial"                                                    Version="1.6.12-alpha" />
-    <PackageReference Update="xunit.extensibility.core"                                               Version="2.4.2" />
-    <PackageReference Update="xunit.extensibility.execution"                                          Version="2.4.2" NoWarn="NU1608" />
-    <PackageReference Update="xunit.runner.console"                                                   Version="2.4.2" />
-    <PackageReference Update="xunit.runner.visualstudio"                                              Version="2.4.5" />
+    <PackageReference Update="xunit"                                                                  Version="2.4.2-pre.13" />
+    <PackageReference Update="xunit.analyzers"                                                        Version="0.12.0-pre.19"/>
+    <PackageReference Update="xunit.assert"                                                           Version="2.4.2-pre.13" />
+    <PackageReference Update="xunit.combinatorial"                                                    Version="1.4.1" />
+    <PackageReference Update="xunit.extensibility.core"                                               Version="2.4.2-pre.13" />
+    <PackageReference Update="xunit.extensibility.execution"                                          Version="2.4.2-pre.13" NoWarn="NU1608" />
+    <PackageReference Update="xunit.runner.console"                                                   Version="2.4.1" />
+    <PackageReference Update="xunit.runner.visualstudio"                                              Version="2.4.3" />
 
     <!-- Integration Tests -->
     <PackageReference Update="Microsoft.DotNet.Common.ProjectTemplates.1.x"                           Version="1.0.0-beta2-20170629-269" />
