Add IsExternalInit package
Allows use of C# records and init properties when targeting .NET Framework.

--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -89,6 +89,7 @@
 
     <!-- 3rd party -->
     <PackageReference Update="Newtonsoft.Json"                                                        Version="13.0.3" />
+    <PackageReference Update="IsExternalInit"                                                         Version="1.0.3" PrivateAssets="all" />
 
     <!-- Tests -->
     <PackageReference Update="Moq"                                                                    Version="4.16.1" />
