--- a/eng/imports/HostAgnostic.props
+++ b/eng/imports/HostAgnostic.props
@@ -64,6 +64,7 @@
 
     <!-- 3rd party -->
     <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="IsExternalInit" />
 
     <!-- Host-Agnostic Visual Studio -->
     <PackageReference Include="Microsoft.VisualStudio.ImageCatalog" />
