--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -17,14 +17,15 @@
     <PackageReference Update="Microsoft.VisualStudioEng.MicroBuild.Core"                              Version="1.0.0" />
     <PackageReference Update="Nerdbank.GitVersioning"                                                 Version="3.6.79-alpha" />
     <PackageReference Update="Nerdbank.Streams"                                                       Version="2.9.112" />
-    <PackageReference Update="System.IO.Pipelines"                                                    Version="6.0.3" />
+    <PackageReference Update="System.IO.Pipelines"                                                    Version="7.0.0" />
 
     <!-- VS SDK -->
+    <!-- https://dev.azure.com/azure-public/vside/_artifacts/feed/vssdk -->
     <PackageReference Update="EnvDTE"                                                                 Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.Internal.VisualStudio.Interop"                                Version="17.3.32804.24" />
-    <PackageReference Update="Microsoft.ServiceHub.Framework"                                         Version="4.1.2060-alpha" />
+    <PackageReference Update="Microsoft.ServiceHub.Framework"                                         Version="4.3.36-preview" />
     <PackageReference Update="Microsoft.VisualStudio.ComponentModelHost"                              Version="17.3.198" />
-    <PackageReference Update="Microsoft.VisualStudio.Composition"                                     Version="17.4.1-alpha" />
+    <PackageReference Update="Microsoft.VisualStudio.Composition"                                     Version="17.7.9-preview" />
     <PackageReference Update="Microsoft.VisualStudio.Data.Core"                                       Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.Data.Services"                                   Version="17.0.0-preview-2-31223-026" />
     <PackageReference Update="Microsoft.VisualStudio.DataDesign.Common"                               Version="17.0.0-preview-2-31223-026" />
@@ -35,19 +36,19 @@
     <PackageReference Update="Microsoft.VisualStudio.ImageCatalog"                                    Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VisualStudio.Interop"                                         Version="17.4.0-preview-2-32826-307" />
     <PackageReference Update="Microsoft.VisualStudio.ManagedInterfaces"                               Version="8.0.50728" />
-    <PackageReference Update="Microsoft.VisualStudio.RpcContracts"                                    Version="17.5.21" />
+    <PackageReference Update="Microsoft.VisualStudio.RpcContracts"                                    Version="17.7.5-preview" />
     <PackageReference Update="Microsoft.VisualStudio.SDK.EmbedInteropTypes"                           Version="15.0.36" />
     <PackageReference Update="Microsoft.VisualStudio.Settings.15.0"                                   Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VisualStudio.Setup.Configuration.Interop"                     Version="3.0.4492" />
     <PackageReference Update="Microsoft.VisualStudio.Shell.15.0"                                      Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VisualStudio.Shell.Design"                                    Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VisualStudio.Shell.Framework"                                 Version="17.3.32804.24" />
-    <PackageReference Update="Microsoft.VisualStudio.Telemetry"                                       Version="16.6.7" />
+    <PackageReference Update="Microsoft.VisualStudio.Telemetry"                                       Version="17.7.47" />
     <PackageReference Update="Microsoft.VisualStudio.TemplateWizardInterface"                         Version="17.3.32804.24" />
-    <PackageReference Update="Microsoft.VisualStudio.Threading"                                       Version="17.6.36-alpha" />
-    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers"                             Version="17.6.36-alpha" />
-    <PackageReference Update="Microsoft.VisualStudio.Utilities"                                       Version="17.4.0-preview-3-32908-042" />
-    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.6.4-alpha" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading"                                       Version="17.7.15-preview" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers"                             Version="17.7.15-preview" />
+    <PackageReference Update="Microsoft.VisualStudio.Utilities"                                       Version="17.7.36307-preview.2" />
+    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.6.11" />
     <PackageReference Update="Microsoft.VisualStudio.XmlEditor"                                       Version="17.3.32804.24" />
     <PackageReference Update="Microsoft.VSSDK.BuildTools"                                             Version="17.5.18-preview1" />
     <PackageReference Update="System.Threading.Tasks.Dataflow"                                        Version="7.0.0" />
@@ -55,7 +56,7 @@
     <PackageReference Update="VsWebSite.Interop"                                                      Version="16.8.30523.219" />
 
     <!-- https://github.com/dotnet/roslyn/issues/53877 -->
-    <PackageReference Include="StreamJsonRpc"                                                         Version="2.14.20" />
+    <PackageReference Include="StreamJsonRpc"                                                         Version="2.16.21-preview" />
 
     <!-- CPS -->
     <!-- Find versions at https://dev.azure.com/azure-public/vside/_artifacts/feed/vs-impl -->
@@ -65,17 +66,17 @@
     <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools"                         Version="17.5.396-pre" />
 
     <!-- Roslyn -->
-    <PackageReference Update="Microsoft.CodeAnalysis"                                                 Version="4.6.0-1.final" />
+    <PackageReference Update="Microsoft.CodeAnalysis"                                                 Version="4.7.0-1.final" />
     <PackageReference Update="Microsoft.CSharp"                                                       Version="4.7.0" />
-    <PackageReference Update="Microsoft.Net.Compilers.Toolset"                                        Version="4.6.0-1.final" />
-    <PackageReference Update="Microsoft.VisualStudio.LanguageServices"                                Version="4.6.0-1.final" />
+    <PackageReference Update="Microsoft.Net.Compilers.Toolset"                                        Version="4.7.0-1.final" />
+    <PackageReference Update="Microsoft.VisualStudio.LanguageServices"                                Version="4.7.0-1.final" />
     <PackageReference Update="Microsoft.VisualStudio.IntegrationTest.Utilities"                       Version="2.6.0-beta1-62113-02" />
 
     <!-- Analyzers -->
     <PackageReference Update="CSharpIsNullAnalyzer"                                                   Version="0.1.329" />
     <PackageReference Update="Microsoft.CodeAnalysis.Analyzers"                                       Version="3.3.5-beta1.23165.1" />
-    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle"                                Version="4.6.0-1.final" />
-    <PackageReference Update="Microsoft.CodeAnalysis.VisualBasic.CodeStyle"                           Version="4.6.0-1.final" />
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle"                                Version="4.7.0-1.final" />
+    <PackageReference Update="Microsoft.CodeAnalysis.VisualBasic.CodeStyle"                           Version="4.7.0-1.final" />
     <PackageReference Update="Roslyn.Diagnostics.Analyzers"                                           Version="3.3.5-beta1.23165.1" />
 
     <!-- NuGet -->
