--- a/eng/pipelines/core-pull-request.yml
+++ b/eng/pipelines/core-pull-request.yml
@@ -13,6 +13,7 @@ pr:
   branches:
     include:
     - dev/PortToNET6
+    - csdevkit-release
 
 # Disable CI builds for this pipeline.
 # See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema/trigger?view=azure-pipelines#examples
