Use CS1307 to enforce explicit string comparison
While this helps, it doesn't catch all cases we might want to track. It doesn't flag `==` or `ToHashSet<string>()`, for example.

--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -39,3 +39,5 @@ dotnet_diagnostic.xUnit1004.severity = none     # Test methods should not be ski
 
 # White space rules (experimental)
 dotnet_diagnostic.IDE2001.severity = none       # Allow embedded statements on same line
+
+dotnet_diagnostic.CA1307.severity = suggestion  # Specify StringComparison
