--- a/eng/pipelines/core-official.yml
+++ b/eng/pipelines/core-official.yml
@@ -13,6 +13,7 @@ trigger:
   branches:
     include:
     - dev/PortToNET6
+    - csdevkit-release
 
 # Disable PR builds for this pipeline.
 # See: https://docs.microsoft.com/azure/devops/pipelines/yaml-schema/pr?view=azure-pipelines#examples
