--- a/eng/imports/HostAgnostic.props
+++ b/eng/imports/HostAgnostic.props
@@ -19,8 +19,7 @@
       TODO: Determine a mechanism of switching these depending on the location of the source.
       https://github.com/dotnet/sourcelink#using-source-link-in-net-projects
     -->
-    <!-- <PackageReference Include="Microsoft.SourceLink.GitHub"         PrivateAssets="all" /> -->
-    <PackageReference Include="Microsoft.SourceLink.AzureRepos.Git"         PrivateAssets="all" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub"         PrivateAssets="all" />
     <!-- Path Property: PkgMicrosoft_VisualStudioEng_MicroBuild_Core -->
     <PackageReference Include="Microsoft.VisualStudioEng.MicroBuild.Core" PrivateAssets="all" GeneratePathProperty="true" />
     <!-- Note: We require Nerdbank.GitVersioning beyond simply generating version numbers. It also produces some assembly information such as AssemblyName and PublicKeyToken into a *.ThisAssembly.cs file. -->
