Update build pipelines for C# dev kit (#9079)
Exclude C# dev kit branch - dev/PortToNET6 from official build. We have separate pipeline for build and insertion.
Update PR build pipeline to ensure npm & copy over test results so we can run C# dev kit PRs in same pipeline.

--- a/eng/pipelines/official.yml
+++ b/eng/pipelines/official.yml
@@ -19,6 +19,9 @@ trigger:
     - dev*
     # Any other branches that contain major feature development, or require access to the pipeline, prior to merge.
     - feature/*
+    exclude:
+    # We avoid running C# dev kit feature branch here since it is getting picked up by dev* above
+    - dev/PortToNET6
   paths:
     exclude:
     - docs/*
