--- a/.editorconfig
+++ b/.editorconfig
@@ -437,3 +437,9 @@ dotnet_diagnostic.IDE2006.severity = warning    # Allow blank line after token i
 [*.{vb}]
 dotnet_diagnostic.IDE0031.severity = suggestion   # Use null propagation (nullable)
 dotnet_diagnostic.CA1307.severity = suggestion    # Specify StringComparison
+
+# NETCOREUNDONE: Should be removed when obsolete System.Xaml types are moved from Microsoft.VisualStudio.ProjectSystem.XamlTypes into official package
+# Disabling warning for C# files generated from xaml rules
+[artifacts/*/obj/Microsoft.VisualStudio.ProjectSystem.Managed/net7.0/*.cs]
+# CS0618: Type or member is obsolete
+dotnet_diagnostic.CS0618.severity = silent
