--- a/eng/pipelines/templates/analyze-api.yml
+++ b/eng/pipelines/templates/analyze-api.yml
@@ -46,8 +46,7 @@ jobs:
     inputs:
       softwareFolder: $(Pipeline.Workspace)/$(Build.BuildNumber)/bin/Dlls
       softwareName: Dotnet-Project-System
-      # The VisualStudioMinimumVersion variable is written out by the SetVisualStudioMinimumVersionVariable task in the Build stage.
-      softwareVersionNum: $(VisualStudioMinimumVersion)
+      softwareVersionNum: $(SoftwareVersion)
       softwareBuildNum: $(Build.BuildId)
       symbolsFolder: SRV*http://symweb
       noCopySymbols: true
