--- a/eng/pipelines/templates/publish-assets-and-packages.yml
+++ b/eng/pipelines/templates/publish-assets-and-packages.yml
@@ -133,6 +133,13 @@ jobs:
     inputs:
       nuGetServiceConnections: azure-public/vs-impl
 
+  # Authenticates the .npmrc file for publishing to the internal AzDO feed.
+  # See: https://learn.microsoft.com/azure/devops/pipelines/tasks/package/npm-authenticate?view=azure-devops
+  - task: npmAuthenticate@0
+    displayName: Authenticate NPM Feed
+    inputs:
+      workingFile: $(Build.SourcesDirectory)/src/Microsoft.VisualStudio.ProjectSystem.Managed/.npmrc
+
   # Publishes the NuGet packages to azure-public/vs-impl (https://dev.azure.com/azure-public/vside/_packaging?_a=feed&feed=vs-impl)
   - task: NuGetCommand@2
     displayName: Publish Packages to azure-public
@@ -158,3 +165,21 @@ jobs:
       # This allows the task to succeed if duplicate packages exist. Packages cannot be overridden in a feed.
       # See: https://docs.microsoft.com/azure/devops/pipelines/tasks/package/nuget?view=azure-devops#arguments
       allowPackageConflicts: true
+
+  # Publishes the Managed NuGet package to DevDiv/vs-green (https://dev.azure.com/devdiv/DevDiv/_artifacts/feed/vs-green)
+  - task: NuGetCommand@2
+    displayName: Publish NuGet Package
+    inputs:
+      command: push
+      packagesToPush: $(Pipeline.Workspace)/$(Build.BuildNumber)/packages/Microsoft.VisualStudio.ProjectSystem.Managed.*.nupkg;!$(Pipeline.Workspace)/$(Build.BuildNumber)/packages/Microsoft.VisualStudio.ProjectSystem.Managed.VS.*.nupkg
+      publishVstsFeed: DevDiv/vs-green
+      # This allows the task to succeed if duplicate packages exist. Packages cannot be overridden in a feed.
+      # See: https://docs.microsoft.com/azure/devops/pipelines/tasks/package/nuget?view=azure-devops#arguments
+      allowPackageConflicts: true
+
+  # Publishes the NPM package to the internal AzDO feed.
+  # Feed: https://dev.azure.com/devdiv/DevDiv/_artifacts/feed/vs-green/Npm/@microsoft%2Fmicrosoft.visualstudio.projectsystem.managed/
+  # See: https://docs.npmjs.com/cli/v8/commands/npm-publish
+  # npmrc doc: https://docs.npmjs.com/cli/v9/using-npm/config#npmrc-files
+  - powershell: . '$(Build.SourcesDirectory)/eng/scripts/PublishNPMPackage.ps1' -npmrcPath '$(Build.SourcesDirectory)/src/Microsoft.VisualStudio.ProjectSystem.Managed/.npmrc' -tgzPath ((Get-ChildItem -Path '$(Pipeline.Workspace)/$(Build.BuildNumber)/packages/microsoft-microsoft.visualstudio.projectsystem.managed-*.tgz').FullName)
+    displayName: Publish NPM Package
